--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "repository" : "sample_phonegap_media_handbell"
-  "caption": "Handbell",
-  "tooltip": "Handbell Using PhoneGap Media",
-  "description": "HandBell allows you to shake a picture of a bell and hear sounds. It demonstrates the use of PhoneGap media object.",
-  "articleurl": "http://software.intel.com/en-us/articles/create-handbell-using-html5-and-phonegap",
-  "category": "HTML5",
-  "visible" : "true"
+	"reponame":"sample-handbell",
+	"caption":"Handbell",
+	"tooltip":"Uses the PhoneGap Media and Accelerometer APIs",
+	"description":"Shake a picture of a bell and hear sounds. A demonstration of the PhoneGap media object.",
+	"articleurl":"http://software.intel.com/en-us/articles/create-handbell-using-html5-and-phonegap",
+	"categories":["PhoneGap"],
+	"visible" : "true"
 }
